Mudança de cores do Portfólio

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,11 @@
   
   /* Variables */
   :root {
-    --main-color: #bea22f;
+    --main-color: #3893cf;
     --main-text-color: #FFF;
     --border-color: #999;
     --bio-bg-color: #31313d;
-    --bio-border-color: #bea22f;
+    --bio-border-color: #3893cf;
     --about-bg-color: #3e3e50;
   }
   
